--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,4 @@ jobs:
           aws-region: ap-southeast-1
       - name: Copy files to S3 with the AWS CLI
         run: |
-          aws s3 sync ./out s3:::my-resume-nextjs-webapp
+          aws s3 sync ./out s3://my-resume-nextjs-webapp/
